Camera zoom not working with G+MMB #88478

Closed
opened 2021-05-22 14:40:35 +02:00 by Lucas Boutrot · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.47

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-22 04:53, hash: f7b22fc3d2
Worked: (newest version of Blender that worked as expected)
Caused by 9a6fd69993

Short description of error
In camera view, the manipulation G and then MMB used to make the camera move on its local Z axis. Now, it says at the top left corner of the 3D Viewport that it moves on the local Z axis, but it actually moves on the global Z axis.

cam_axis_bug.jpg

Exact steps for others to reproduce the error

  • New scene
  • Camera view numpad 0
  • Press G
  • Press Middle Mouse Button
  • Move the mouse
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.47 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-22 04:53, hash: `f7b22fc3d2` Worked: (newest version of Blender that worked as expected) Caused by 9a6fd69993 **Short description of error** In camera view, the manipulation G and then MMB used to make the camera move on its local Z axis. Now, it says at the top left corner of the 3D Viewport that it moves on the local Z axis, but it actually moves on the global Z axis. ![cam_axis_bug.jpg](https://archive.blender.org/developer/F10135910/cam_axis_bug.jpg) **Exact steps for others to reproduce the error** - New scene - Camera view numpad 0 - Press G - Press Middle Mouse Button - Move the mouse
Author

Added subscriber: @thornydre

Added subscriber: @thornydre
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm the issue for 3.0.0 alpha, hash: f7b22fc3d2.

Dolly along local axis does not work with with middle mouse button it does work with G + z twice.

I can confirm the issue for 3.0.0 alpha, hash: `f7b22fc3d2`. Dolly along local axis does not work with with middle mouse button it does work with `G + z twice`.
Member

It's regression. will bisect it.

It's regression. will bisect it.
Member

Caused by 9a6fd69993

Regression, so marking it as a high priority.

Caused by 9a6fd69993 Regression, so marking it as a high priority.

Added subscriber: @kosblend

Added subscriber: @kosblend
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

May be @mano-wii is interested here ?

May be @mano-wii is interested here ?
Germano Cavalcante self-assigned this 2021-05-24 15:34:42 +02:00

This issue was referenced by 1a69d491e5

This issue was referenced by 1a69d491e57cb7b7a834f265f59df3bd8f01e55b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Thanks a lot !

Thanks a lot !
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88478
No description provided.