source/blender/editors/transform/transform_mode_translate.c
@@ -471,6 +471,7 @@ void initTranslation(TransInfo *t)
     t->num.unit_type[2] = B_UNIT_NONE;
   }
 
-  transform_mode_default_modal_orientation_set(t, V3D_ORIENT_GLOBAL);
+  transform_mode_default_modal_orientation_set(
+      t, (t->options & CTX_CAMERA) ? V3D_ORIENT_VIEW : V3D_ORIENT_GLOBAL);
 }
 /** \} */
